# css-shark-compiler

./: CMakeLists.txt  Installer CSS SHARK.iss  License.txt  Readme.txt  b.bat  cssshark.cpp  cssshark.hpp  sjs.cpp
.github/workflows/: clangnew.yml  cmake-win.yml  cmake.yml
example/: t.css
